--- a/micro-services/auth-service/package.json
+++ b/micro-services/auth-service/package.json
@@ -4,8 +4,7 @@
     "description": "Authentication Service for SchoolInc",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js",
+        "start": "nodemon index.js",
         "test": "jest"
     },
     "keywords": [],
