--- a/nginx-lb/nginx.conf
+++ b/nginx-lb/nginx.conf
@@ -4,8 +4,7 @@ events {
 
 http {
     upstream api_gateway {
-        server api-gateway-1:4000;
-        server api-gateway-2:4000;
+        server api-gateway:4000;
     }
 
     upstream frontend {
@@ -15,8 +14,8 @@ http {
     server {
         listen 80;
 
-        location /api/ {
-            proxy_pass http://api_gateway;
+        location /graphql {
+            proxy_pass http://api_gateway/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
