--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,70 +1,56 @@
 services:
-    auth-service:
-        build: ./micro-services/auth-service
-        container_name: auth-service
+    user-service:
+        build: ./micro-services/user-service
+        container_name: user-service
+        restart: always
         ports:
             - "8080"
         environment:
-            - MONGO_URI=mongodb://auth-db:27017/auth
+            - MONGO_URI=mongodb://mongo-db:27017/users
             - JWT_SECRET=YRMCKrygcXtx1bVpEMcBKIK9LxX8aDUTUQy2XyuLRCbnoPOhxUeIPqIQW01UfC6QgEKETKf2rM9UQnc4FkRSxA
         depends_on:
-            - auth-db
+            - mongo-db
         networks:
             - campus-connect
 
     grade-service:
         build: ./micro-services/grade-service
         container_name: grade-service
+        restart: always
         ports:
             - "8081"
         environment:
-            - MONGO_URI=mongodb://grade-db:27017/grades
-            - AUTH_SERVICE_URL=http://auth-service:8080/graphql
+            - MONGO_URI=mongodb://mongo-db:27017/grades
+            - USER_DB_URI=mongodb://mongo-db:27017/users
+            - JWT_SECRET=YRMCKrygcXtx1bVpEMcBKIK9LxX8aDUTUQy2XyuLRCbnoPOhxUeIPqIQW01UfC6QgEKETKf2rM9UQnc4FkRSxA
         depends_on:
-            - grade-db
-            - auth-service
+            - mongo-db
         networks:
             - campus-connect
 
     class-service:
         build: ./micro-services/class-service
         container_name: class-service
+        restart: always
         ports:
             - "8082"
         environment:
-            - MONGO_URI=mongodb://class-db:27017/classes
-            - AUTH_SERVICE_URL=http://auth-service:8080/graphql
-            - GRADE_SERVICE_URL=http://grade-service:8081/graphql
+            - MONGO_URI=mongodb://mongo-db:27017/classes
+            - USER_DB_URI=mongodb://mongo-db:27017/users
+            - JWT_SECRET=YRMCKrygcXtx1bVpEMcBKIK9LxX8aDUTUQy2XyuLRCbnoPOhxUeIPqIQW01UfC6QgEKETKf2rM9UQnc4FkRSxA
         depends_on:
-            - class-db
-            - auth-service
+            - mongo-db
+            - grade-service
         networks:
             - campus-connect
 
-    auth-db:
+    mongo-db:
         image: mongo:latest
+        container_name: mongo-db
         ports:
             - "27017:27017"
         volumes:
-            - auth-data:/data/db
-        networks:
-            - campus-connect
-
-    grade-db:
-        image: mongo:latest
-        ports:
-            - "27018:27017"
-        volumes:
-            - grade-data:/data/db
-        networks:
-            - campus-connect
-
-    class-db:
-        image: mongo:latest
-        ports:
-            - "27019:27017"
-        volumes:
-            - class-data:/data/db
+            - mongo-data:/data/db
         networks:
             - campus-connect
     api-gateway:
@@ -73,7 +59,7 @@ services:
         ports:
             - "4000:4000"
         environment:
-            - AUTH_SERVICE_URL=http://auth-service:8080/graphql
+            - USER_SERVICE_URL=http://user-service:8080/graphql
             - GRADE_SERVICE_URL=http://grade-service:8081/graphql
             - CLASS_SERVICE_URL=http://class-service:8082/graphql
         networks:
@@ -108,6 +94,4 @@ networks:
         driver: bridge
 
 volumes:
-    auth-data:
-    grade-data:
-    class-data:
+    mongo-data:
