--- a/micro-services/grade-service/package.json
+++ b/micro-services/grade-service/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "node-fetch": "^2.7.0"
   },
