--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-gateway",
   "version": "1.0.0",
-  "description": "GraphQL API Gateway for SchoolInc",
+  "description": "GraphQL API Gateway for CampusConnect",
   "type": "module",
   "main": "index.js",
   "scripts": {
